--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" itemscope itemtype="http://schema.org/Article">
-  {% include head.html %} 
+<head>
+{% include head.html %} 
+</head>
   <body class="avenir bg-brand-light-gray">
     <div id="page" class="bg-brand-light-gray">
       {{ page.content }}
