Try and fix seo meta, add adtl files

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,3 +6,19 @@
     Made with ❤️ on a 🖥
   </p>
 </section>
+
+<!-- Drip -->
+<script type="text/javascript">
+var _dcq = _dcq || [];
+var _dcs = _dcs || {}; 
+_dcs.account = '1942376';
+
+(function() {
+  var dc = document.createElement('script');
+  dc.type = 'text/javascript'; dc.async = true; 
+  dc.src = '//tag.getdrip.com/1942376.js';
+  var s = document.getElementsByTagName('script')[0];
+  s.parentNode.insertBefore(dc, s);
+})();
+</script>
+<!-- End Drip -->
