--- a/_includes/forms/newsletter.html
+++ b/_includes/forms/newsletter.html
@@ -1,6 +1,6 @@
 {% assign inputClasses = "border-box dib f5 f4-l input-reset bn black-50 bg-brand-mid-gray pa3 lh-solid w-100 w-25-l mt2 mt0-l mr2-ns" %}
 {% assign buttonClasses = "dib f5 f4-l input-reset bn brand-dark-yellow bg-brand-yellow grow pa3 lh-solid w-100 w-25-l mt2 mt0-l" %}
-<form class="w-100 bg-white" action="https://www.getdrip.com/forms/5085249/submissions" method="post" target="_blank" data-drip-embedded-form="5085249">
+<form action="https://www.getdrip.com/forms/73538499/submissions" method="post" data-drip-embedded-form="73538499" class="w-100 bg-white">
   <h2 class="dib mt0 f3 f2-m f1-l fw4 f-underline lh-title">Stay in the loop</h2>
   <p class="f4 f3-ns mb4-ns"><strong>Join my monthly newsletter</strong> for regular updates on my open-source projects, writing, reading and resource lists.</p>
   <input type="text" required="true" name="fields[fname]" placeholder="What's your first name?" class="{{ inputClasses }}" />
