--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,8 @@
   </p>
 </section>
 
+<script src="/assets/js/jquery-3.2.0.min.js" type="text/javascript"></script>
+
 <!-- Drip -->
 <script type="text/javascript">
 var _dcq = _dcq || [];
