--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -25,10 +25,10 @@
         </div>
       </section>
       {% endif %}
-      {% include business.html %}
-      <section class="relative center w-100 mw-default ph3 pv5 ph4-m pv5-l ph5-l bt b--black-10 bg-white" id="newsletter">
+      <!-- {% include business.html %} -->
+      <!-- <section class="relative center w-100 mw-default ph3 pv5 ph4-m pv5-l ph5-l bt b--black-10 bg-white" id="newsletter">
         {% include forms/newsletter.html %}
-      </section>
+      </section> -->
       {% include footer.html %}
     </div>
   </body>
