--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
-<section class="relative center w-100 mw-default ph3 pv3 ph4-m ph5-l bt b--black-10 bg-white" id="newsletter">
-  <ul class="dib w-100 w-50-l pa0 ma0 list tc tl-l">
+<section class="relative center flex flex-wrap w-100 mw-default ph3 pv3 ph4-m ph5-l bt b--black-10 bg-white" id="newsletter">
+  <ul class="w-100 w-50-l pa0 ma0 list tc tl-l">
     <li class="dib w-100 w-auto-ns pr-2-ns"><a href="{{ site.url }}/privacy-policy/" title="View privacy policy" class="link dim gray">Privacy Policy</a></li> 
   </ul>
-  <p class="dib w-100 w-50-l pa0 ma0 mt3 mt0-ns tc tr-l">
+  <p class="w-100 w-50-l pa0 ma0 mt3 mt0-ns tc tr-l">
     Made with ❤️ on a 🖥
   </p>
 </section>
