--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,4 +1,4 @@
-<header class="relative center w-100 mw-default ph3 pv5 ph4-m pv5-l ph5-l bt b--black-10 bg-brand-yellow overflow-hidden overflow-visible-l" id="hero">
+<header class="relative center w-100 mw-default ph3 pv5 ph4-m pv5-l ph5-l bt b--black-10 bg-orange overflow-hidden overflow-visible-l" id="hero">
   <h1 class="relative f3 f2-m fw4 f1-l lh-title z-2">
     {{ include.title|markdownify }}
   </h1>
